--- a/Pandas/pandas_01.ipynb
+++ b/Pandas/pandas_01.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Getting Started](Panda.png)"
+    "![](Panda.png)"
    ]
   },
   {
